--- a/index.html
+++ b/index.html
@@ -9,31 +9,71 @@
 
 <body>
     <div id="main">
-        <div class="box line1">1</div>
-        <div class="box">2</div>
-        <div class="box line2">3</div>
-        <div class="box">4</div>
-        <div class="box line1 div5">
-            <div><a href="#">España</a></div>
+        <div class="box line1 div1">
+
+            <div class="line1col1">
+                <a href="#">Sobre Google</a>
+                <a href="#">Tienda</a>
+            </div>
+
+            <div class="line1col2"> </div>
+
+            <div class="line1col3">
+                <a href="#">Gmail</a>
+                <a>Imagenes</a>
+                <a><img src="img/app.png"></a>
+                <a><img class="gb_Ca gbii foto"
+                        src="https://lh3.googleusercontent.com/ogw/ADea4I6kOEut3DeCkOy0GtVX18_FQpxcuvkAXTYioqg=s32-c-mo"
+                        srcset="https://lh3.googleusercontent.com/ogw/ADea4I6kOEut3DeCkOy0GtVX18_FQpxcuvkAXTYioqg=s32-c-mo 1x, https://lh3.googleusercontent.com/ogw/ADea4I6kOEut3DeCkOy0GtVX18_FQpxcuvkAXTYioqg=s64-c-mo 2x "
+                        alt="" aria-hidden="true" data-noaft="">
+                </a>
+            </div>
+
+
         </div>
+        <div class="box line2">
+
+            <div class="box" id="main2">
+                <div><img src="img/google.png" class="imgGoogle"></div>
+                <div id="botones">
+                    <button class="input-button" id="btn-start"><img src="img/lupa.png" id="lupa"></button>
+                    <input class="input"> </input>
+                    <button class="input-button" id="btn-end"><img src="img/micro.png" id="micro"></button>
+                </div>
+
+                <div>
+                    <button id="button1" class="button">Buscar con Google</button>
+                    <button class="button">Voy a tener suerte</button>
+                </div>
+                <div>Ofrecido por Google en: <a>català</a> <a> galego</a> <a> euskara</a></div>
+            </div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+
+        <div class="box line1 div5">
+            <a href="#">España</a>
+        </div>
+
         <div class="box line1 div6">
 
-          <!--  <div class="column1">-->
+            <div class="column1">
                 <div><a href="#">Publicidad</a></div>
                 <div><a href="#">Empresa</a></div>
                 <div><a href="#">Cómo funciona la Búsqueda</a></div>
-           <!-- </div>
-            <div class="column2"> -->
+            </div>
+            <div class="column2">
                 <div><img src="img/carboFree.png" class="img">
                     <a href="#">Emisión neutra de carbono desde el 2007</a>
                 </div>
-          <!--  </div>
+            </div>
 
-            <div class="column3">-->
+            <div class="column3">
                 <div><a href="#">Privacidad</a> </div>
                 <div><a href="#">Términos</a></div>
                 <div><a href="#">Configuración</a></div>
-           <!-- </div>-->
+            </div>
         </div>
     </div>
 </body>
